--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,16 @@
 <html>
   <head>
-    <link href="./style/app.css"></link>
+    <link href="./style/app.css" rel="stylesheet">
+    <script src="./external/systemjs/dist/system.js"></script>      
   </head>
   <body>
-    <script src="./app/tetris.js"></script>
+    <script>
+      System.config({
+        packages: {
+          app: { defaultExtension: 'js' }
+        }
+      });
+    </script>
+    <script>System.import('app/tetris');</script>
   </body>
 </html>
