--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
         }
       });
     </script>
-    <script>System.import('app/tetris');</script>
+    <script>System.import('app/index');</script>
   </body>
 </html>
